
name:                prose
version:             0.0.1
synopsis:            Pure-Haskell Unicode string handling
description:         Proper Unicode strings in pure Haskell
license:             BSD3
license-file:        LICENSE
author:              Antonio Nikishaev
maintainer:          me@lelf.lu
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

source-repository head
        type: git
        location: https://github.com/llelf/prose

source-repository head
        type: darcs
        location: http://hub.darcs.net/lelf/prose


Library
  exposed-modules:
    Prose,
    Prose.Internal,
      Prose.Internal.Missings,
        Prose.Internal.SpacingMark, Prose.Internal.Grapheme_Extend,
        Prose.Internal.LV, Prose.Internal.LVT,
        Prose.Internal.Numeric, Prose.Internal.Hebrew_Letter,
        Prose.Internal.ALetter, Prose.Internal.MidNum, Prose.Internal.Katakana,
    Prose.Types,
    Prose.CharSet,
    Prose.Properties.Types,
      Prose.Properties.CombiningClass, Prose.Properties.Comp,
      Prose.Properties.DecompD, Prose.Properties.DecompKD,
    Prose.Normalization,
      Prose.Normalization.Text,
    Prose.Segmentation.Common,
      Prose.Segmentation.Graphemes,
      Prose.Segmentation.Words

  other-modules:

  -- other-extensions:    
  build-depends:   base < 5,
    text, charset >= 0.3.7,
    data-list-sequences, bytestring, utf8-string,
    attoparsec, semigroups,
    -- tooling, XXX move out there
    microlens, microlens-th,
    containers,
    parsec, tagsoup,
    split, binary
  -- hs-source-dirs:
  default-language:    Haskell2010


Benchmark bench
  type:       exitcode-stdio-1.0
  main-is:    benchmark/Bench.hs
  default-language: Haskell2010
  build-depends: base, text-icu, criterion, deepseq,
                 charset, text, bytestring, containers,
                 microlens, microlens-th,
                 semigroups,
                 attoparsec,
                 data-list-sequences >= 0.1
  ghc-options: -O2

Test-suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -O0
  hs-source-dirs:   tests .
  main-is:          Tests.hs
  other-modules:
                NormalizationTests
                SegmentationTests
                Prose.Internal.GraphemeBreakTest
                Prose.Internal.WordBreakTest
                Prose.Internal.NormalizationTest
  build-depends:
     base >=4 && <5,
     prose,
     charset, text, bytestring,
     microlens, microlens-th,
     containers,
     semigroups,
     attoparsec,
     data-list-sequences,
     QuickCheck, tasty, tasty-quickcheck, tasty-hunit

